--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="https://nadvilboa.github.io/8-4-1-minimum/mysites.html"><b>мои лучшие работы</b></a>
-        <a class="link-nav" href="https://nadvilboa.github.io/8-4-1-minimum/info.html"><b>помощь новичкам</b></a>
-        <a class="link-nav" href="view-source:https://learn.algoritmika.org/lesson?lesson=6187&level=3&task=21818"><b>Об авторе</b></a>
+        <a class="link-nav" href="https://evgeniya361.github.io/vpcjenya/"><b>мои лучшие работы</b></a>
+        <a class="link-nav" href="https://evgeniya361.github.io/vpsjenya/"><b>помощь новичкам</b></a>
+        <a class="link-nav" href="https://evgeniya361.github.io/jenyavpc/"><b>Об авторе</b></a>
       </nav>
       <h1>Web-sites<br/> developer</h1>
       <p>разметка и стилизация</p>
